--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 .header-container
 .logo {
     font-weight: 300;
-    font-size: 40px;
+    font-size: 2.5rem;
 }
 
 .main {
@@ -82,7 +82,7 @@ h2 {
 
 .footer-container
 hr {
-    border: 2px solid;
+    border: 2px solid black;
 }
 
 .footer-container
@@ -112,5 +112,12 @@ h3 {
 .icons
 a {
     color: #1DAFD6;
+}
+
+@media (min-width: 800px) {
+    .header {
+        width: 80%;
+        margin: 30px auto;
+    }
 }
 
