--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@ h3 {
 
 .footer-container
 .icons {
-    width: 140px;
+    width: 240px;
+    height: 40px;
     display: flex;
     justify-content: space-between;
 }
